--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="list_back">#f2f2f2</color>
     <color name="background_home">#eeeeee</color>
     <color name="upcoming_appointment_count">#21AA47</color>
+    <color name="date_onicon">#006FE8</color>
 
 
     <color name="hostisMe">#9F9F9F</color>
